Fix retained terrain and entity lifecycle